Inline text spacing bug

--- a/css/andycheng.webflow.css
+++ b/css/andycheng.webflow.css
@@ -841,6 +841,9 @@ img {
 
 .text-content.inline {
   display: inline-block;
+}
+
+.text-content.inline.multiple {
   margin-right: 20px;
 }
 
